--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "dotenv": "^16.0.0",
+    "express": "^4.17.3",
     "inquirer": "^8.2.1",
     "mysql2": "^2.3.3"
   },
